feat/gabriel-felix: Alteração do index. Tag h3 adicionada.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
     <h1>testando</h1>
     <h2> Cuida pra cuidar </h2>
-    <h2> TESTANDO BRANCHHhhhH</h2>
+    <h3>BOOOOORAAAAAAA - Gabriel</h3>
+
+
 </body>
 </html>
