feat/rodrigo-diniz: adicionando h3 no index.html

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>testando</h1>
     <h2> Cuida pra cuidar </h2>
     <h2> TESTANDO BRANCHHhhhH</h2>
+    <h3> teste 3 </h3>
 </body>
 </html>
