feat/gabriel-felix: Inserção do formulário e estilização

--- a/index.html
+++ b/index.html
@@ -4,12 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>testendo git-hub</title>
+    <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
+
     <h1>testando</h1>
     <h2> Cuida pra cuidar </h2>
     <h3>BOOOOORAAAAAAA - Gabriel</h3>
 
+    <div class="container">
+
+        <div class="dados">
+
+            <form action="">
+                <label for="">Nome: </label>
+                <input type="text" placeholder="Insira seu nome">
+
+                <input type="submit">
+            </form>
+
+        </div>
+
+    </div>
 
 </body>
 </html>
