--- a/indexCadastro.html
+++ b/indexCadastro.html
@@ -6,6 +6,55 @@
     <title>Cadastro</title>
 </head>
 <body>
+    // Veiculo.java
+public abstract class Veiculo {
     
+    // Atributos privados (Encapsulamento) 
+    private String marca;
+    private String modelo;
+    private int ano;
+
+    // Construtor
+    public Veiculo(String marca, String modelo, int ano) {
+        this.marca = marca;
+        this.modelo = modelo;
+        this.ano = ano;
+    }
+
+    // Métodos abstrato (Polimorfismo) 
+    // Força as subclasses a implementarem seu próprio cálculo de locação
+    public abstract double calcularValorLocacao();
+
+    // Método para exibir dados básicos 
+    // Pode ser sobrescrito pelas subclasses
+    public String exibirDados() {
+        return marca + " " + modelo + " (" + ano + ")";
+    }
+
+    // Métodos Getters e Setters (Encapsulamento) 
+    public String getMarca() {
+        return marca;
+    }
+
+    public void setMarca(String marca) {
+        this.marca = marca;
+    }
+
+    public String getModelo() {
+        return modelo;
+    }
+
+    public void setModelo(String modelo) {
+        this.modelo = modelo;
+    }
+
+    public int getAno() {
+        return ano;
+    }
+
+    public void setAno(int ano) {
+        this.ano = ano;
+    }
+}
 </body>
 </html>
