feat/david-ryan: resolvendo conflito feitos pro emmanoel

--- a/login.html
+++ b/login.html
@@ -10,6 +10,10 @@
     <h1> LOGIN</h1>
     <h2>Bem-vindo de volta! Por favor, faça login para continuar.</h2>
     <h2>EMAIL</h2>
+    <input type="email" placeholder="Digite seu email">
+    <h2>SENHA</h2>
+    <input type="password" placeholder="Digite sua senha">
+
     
 </body>
 </html>
