feat/gabriel-felix: Alteração na index e na estilização

--- a/index.html
+++ b/index.html
@@ -8,20 +8,18 @@
 </head>
 <body>
 
-    <h1>testando</h1>
-    <h2> Cuida pra cuidar </h2>
-    <h3>BOOOOORAAAAAAA - Gabriel</h3>
-    <h5> Ta ficando complicado </h5>
-
     <div class="container">
 
         <div class="dados">
 
             <form action="">
-                <label for="">Nome: </label>
+                <label for="">Nome: </label> 
                 <input type="text" placeholder="Insira seu nome">
-
-                <input type="submit">
+                    
+                    <div>
+                        <input class="btn-cinza" type="submit">
+                    </div>
+                
             </form>
 
         </div>
