--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
 <body>
 
     <h1> LOGIN</h1>
-    <h2>Bem-vindo de volta! Por favor, faça login para continuar.</h2>
+    <h2>Bem-vindo de volta! Por favor, faça logim para continuar.</h2>
     <h2>EMAIL</h2>
     
 </body>
