--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <input type="text" placeholder="Insira seu nome">
                 </div>
                 
-                <div>
+                <div class="input-2">
                     <label class="input-deco">Email: </label>
                     <input type="email" placeholder="Insira seu e-mail">
                 </div>  
